--- a/data/config.json
+++ b/data/config.json
@@ -1,7 +1,7 @@
 [
   {
     "masterKey": {
-      "admin": [],
+      "admin": [100029520645001],
       "devMode": false,
       "database": false,
 			"restartTime": 9999999
